--- a/web/index.html
+++ b/web/index.html
@@ -54,5 +54,24 @@
       });
     });
   </script>
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyCls--46qt7mJFoSDAFrVajR7po6AZbHrM",
+    authDomain: "bmi-cali.firebaseapp.com",
+    projectId: "bmi-cali",
+    storageBucket: "bmi-cali.appspot.com",
+    messagingSenderId: "574398540744",
+    appId: "1:574398540744:web:c82b6ff8fedd23a7bd6efd"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
 </body>
 </html>
